# hrtf_course

./: README.md  pyproject.toml
data/sofa/: IM_shift_+0.7.sofa  IM_shift_+0.8.sofa  IM_shift_+0.9.sofa  IM_shift_+1.1.sofa  IM_shift_+1.2.sofa  IM_shift_+1.3.sofa  IM_shift_+10pct.sofa  IM_shift_0.94.sofa  IM_shift_0.97.sofa  IM_shift_1.03.sofa  IM_shift_1.06.sofa
hrtf_course/: __init__.py  _dsp.py  _dsp_primitives.py  _localization_metrics.py  _plot.py  _subject.py  analysis.py  conditions.py  manipulations.py  preview.py  study.py  vsi.py
hrtf_course.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: 01_design_conditions.py  01_record_hrtf.py  02_analyze.py  02_experiment1_freq_shift.py  03_experiment2_widen.py  04_analyze_pooled.py
