[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hrtf_course"
version = "0.1.0"
description = "Cue editing and behavioural analysis for the practical psychoacoustics course."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Paul Friedrich" }]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "slab",
    # Needed by slab.HRTF.read_sofa() for reading SOFA files.
    "h5py",
    "h5netcdf",
    # The DSP / VSI / plot helpers used by this package are vendored —
    # see hrtf_course/{_dsp_primitives.py, vsi.py, _plot.py}.  No
    # dependency on hrtf_relearning; students just `uv sync` and go.
    "netcdf4"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hrtf_course*"]
